A3/cool.output
Terminals unused in grammar

   ERROR
   LT


State 10 conflicts: 2 shift/reduce
State 18 conflicts: 2 shift/reduce
State 19 conflicts: 2 shift/reduce
State 20 conflicts: 2 shift/reduce
State 93 conflicts: 1 shift/reduce
State 96 conflicts: 1 shift/reduce
State 97 conflicts: 1 shift/reduce
State 120 conflicts: 1 shift/reduce
State 130 conflicts: 1 shift/reduce
State 131 conflicts: 1 shift/reduce
State 132 conflicts: 1 shift/reduce
State 133 conflicts: 1 shift/reduce
State 134 conflicts: 1 shift/reduce
State 135 conflicts: 1 shift/reduce
State 138 conflicts: 9 shift/reduce
State 178 conflicts: 9 shift/reduce
State 194 conflicts: 9 shift/reduce
State 204 conflicts: 9 shift/reduce
State 212 conflicts: 9 shift/reduce
State 215 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features '}' ';'
    6      | CLASS TYPEID INHERITS error '{' features '}' ';'
    7      | CLASS TYPEID error TYPEID '{' features '}' ';'
    8      | CLASS TYPEID '{' error '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID '{' error '}' ';'

   10 features: /* empty */
   11         | feature
   12         | features feature

   13 feature: OBJECTID '(' ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID '(' formals ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID ':' TYPEID ';'
   16        | OBJECTID ':' TYPEID ASSIGN expression ';'
   17        | error ':' TYPEID ';'
   18        | OBJECTID ':' error ';'
   19        | OBJECTID ':' TYPEID error
   20        | error '(' formals ')' ':' TYPEID '{' expression '}' ';'
   21        | OBJECTID '(' formals ')' ':' TYPEID '{' error '}' ';'
   22        | OBJECTID '(' error ')' ':' TYPEID '{' expression '}' ';'

   23 formals: formal
   24        | formals ',' formal

   25 formal: OBJECTID ':' TYPEID

   26 cases: case
   27      | cases case

   28 case: OBJECTID ':' TYPEID DARROW expression ';'

   29 expressions_comma: /* empty */
   30                  | expression
   31                  | expressions_comma ',' expression

   32 expressions_semi: expression ';'
   33                 | expressions_semi expression ';'
   34                 | error ';'
   35                 | expressions_semi error ';'

   36 expression: OBJECTID ASSIGN expression
   37           | expression '@' TYPEID '.' OBJECTID '(' expressions_comma ')'
   38           | expression '.' OBJECTID '(' expressions_comma ')'
   39           | OBJECTID '(' expressions_comma ')'
   40           | OBJECTID '(' error ')'
   41           | IF expression THEN expression ELSE expression FI
   42           | WHILE expression LOOP expression POOL
   43           | '{' expressions_semi '}'
   44           | CASE expression OF cases ESAC
   45           | NEW TYPEID
   46           | ISVOID expression
   47           | expression '+' expression
   48           | expression '-' expression
   49           | expression '*' expression
   50           | expression '/' expression
   51           | '~' expression
   52           | expression '<' expression
   53           | expression LE expression
   54           | expression '=' expression
   55           | NOT expression
   56           | '(' expression ')'
   57           | OBJECTID
   58           | INT_CONST
   59           | STR_CONST
   60           | BOOL_CONST
   61           | LET OBJECTID ':' TYPEID IN expression
   62           | LET OBJECTID ':' TYPEID ASSIGN expression IN expression
   63           | LET OBJECTID ':' TYPEID ',' let_stmt
   64           | LET OBJECTID ':' TYPEID ASSIGN expression ',' let_stmt
   65           | LET OBJECTID ':' TYPEID ASSIGN error ',' let_stmt

   66 let_stmt: OBJECTID ':' TYPEID IN expression
   67         | OBJECTID ':' TYPEID ASSIGN expression IN expression
   68         | OBJECTID ':' TYPEID ',' let_stmt
   69         | OBJECTID ':' TYPEID ASSIGN expression ',' let_stmt
   70         | OBJECTID ':' TYPEID IN error
   71         | OBJECTID ':' TYPEID ASSIGN error IN expression
   72         | OBJECTID ':' TYPEID ASSIGN expression IN error
   73         | OBJECTID ':' TYPEID ASSIGN error ',' let_stmt


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13 14 20 21 22 37 38 39 40 56
')' (41) 13 14 20 21 22 37 38 39 40 56
'*' (42) 49
'+' (43) 47
',' (44) 24 31 63 64 65 68 69 73
'-' (45) 48
'.' (46) 37 38
'/' (47) 50
':' (58) 13 14 15 16 17 18 19 20 21 22 25 28 61 62 63 64 65 66 67 68
    69 70 71 72 73
';' (59) 4 5 6 7 8 9 13 14 15 16 17 18 20 21 22 28 32 33 34 35
'<' (60) 52
'=' (61) 54
'@' (64) 37
'{' (123) 4 5 6 7 8 9 13 14 20 21 22 43
'}' (125) 4 5 6 7 8 9 13 14 20 21 22 43
'~' (126) 51
error (256) 6 7 8 9 17 18 19 20 21 22 34 35 40 65 70 71 72 73
CLASS (258) 4 5 6 7 8 9
ELSE (259) 41
FI (260) 41
IF (261) 41
IN (262) 61 62 66 67 70 71 72
INHERITS (263) 5 6 9
LET (264) 61 62 63 64 65
LOOP (265) 42
POOL (266) 42
THEN (267) 41
WHILE (268) 42
CASE (269) 44
ESAC (270) 44
OF (271) 44
DARROW (272) 28
NEW (273) 45
ISVOID (274) 46
STR_CONST (275) 59
INT_CONST (276) 58
BOOL_CONST (277) 60
TYPEID (278) 4 5 6 7 8 9 13 14 15 16 17 19 20 21 22 25 28 37 45 61
    62 63 64 65 66 67 68 69 70 71 72 73
OBJECTID (279) 13 14 15 16 18 19 21 22 25 28 36 37 38 39 40 57 61 62
    63 64 65 66 67 68 69 70 71 72 73
ASSIGN (280) 16 36 62 64 65 67 69 71 72 73
NOT (281) 55
LE (282) 53
ERROR (283)
LT (285)


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
program (47)
    on left: 1, on right: 0
class_list (48)
    on left: 2 3, on right: 1 3
class (49)
    on left: 4 5 6 7 8 9, on right: 2 3
features (50)
    on left: 10 11 12, on right: 4 5 6 7 12
feature (51)
    on left: 13 14 15 16 17 18 19 20 21 22, on right: 11 12
formals (52)
    on left: 23 24, on right: 14 20 21 24
formal (53)
    on left: 25, on right: 23 24
cases (54)
    on left: 26 27, on right: 27 44
case (55)
    on left: 28, on right: 26 27
expressions_comma (56)
    on left: 29 30 31, on right: 31 37 38 39
expressions_semi (57)
    on left: 32 33 34 35, on right: 33 35 43
expression (58)
    on left: 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
    54 55 56 57 58 59 60 61 62 63 64 65, on right: 13 14 16 20 22 28
    30 31 32 33 36 37 38 41 42 44 46 47 48 49 50 51 52 53 54 55 56
    61 62 64 66 67 69 71 72
let_stmt (59)
    on left: 66 67 68 69 70 71 72 73, on right: 63 64 65 68 69 73


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' features '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' features '}' ';'
    6      | CLASS . TYPEID INHERITS error '{' features '}' ';'
    7      | CLASS . TYPEID error TYPEID '{' features '}' ';'
    8      | CLASS . TYPEID '{' error '}' ';'
    9      | CLASS . TYPEID INHERITS TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 7


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    4 class: CLASS TYPEID . '{' features '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' features '}' ';'
    6      | CLASS TYPEID . INHERITS error '{' features '}' ';'
    7      | CLASS TYPEID . error TYPEID '{' features '}' ';'
    8      | CLASS TYPEID . '{' error '}' ';'
    9      | CLASS TYPEID . INHERITS TYPEID '{' error '}' ';'

    error     shift, and go to state 8
    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 8

    7 class: CLASS TYPEID error . TYPEID '{' features '}' ';'

    TYPEID  shift, and go to state 11


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' features '}' ';'
    6      | CLASS TYPEID INHERITS . error '{' features '}' ';'
    9      | CLASS TYPEID INHERITS . TYPEID '{' error '}' ';'

    error   shift, and go to state 12
    TYPEID  shift, and go to state 13


state 10

    4 class: CLASS TYPEID '{' . features '}' ';'
    8      | CLASS TYPEID '{' . error '}' ';'

    error     shift, and go to state 14
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    features  go to state 16
    feature   go to state 17


state 11

    7 class: CLASS TYPEID error TYPEID . '{' features '}' ';'

    '{'  shift, and go to state 18


state 12

    6 class: CLASS TYPEID INHERITS error . '{' features '}' ';'

    '{'  shift, and go to state 19


state 13

    5 class: CLASS TYPEID INHERITS TYPEID . '{' features '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 20


state 14

    8 class: CLASS TYPEID '{' error . '}' ';'
   17 feature: error . ':' TYPEID ';'
   20        | error . '(' formals ')' ':' TYPEID '{' expression '}' ';'

    '}'  shift, and go to state 21
    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 15

   13 feature: OBJECTID . '(' ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID . '(' formals ')' ':' TYPEID '{' expression '}' ';'
   15        | OBJECTID . ':' TYPEID ';'
   16        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   18        | OBJECTID . ':' error ';'
   19        | OBJECTID . ':' TYPEID error
   21        | OBJECTID . '(' formals ')' ':' TYPEID '{' error '}' ';'
   22        | OBJECTID . '(' error ')' ':' TYPEID '{' expression '}' ';'

    '('  shift, and go to state 24
    ':'  shift, and go to state 25


state 16

    4 class: CLASS TYPEID '{' features . '}' ';'
   12 features: features . feature

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 27

    feature  go to state 28


state 17

   11 features: feature .

    $default  reduce using rule 11 (features)


state 18

    7 class: CLASS TYPEID error TYPEID '{' . features '}' ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    features  go to state 29
    feature   go to state 17


state 19

    6 class: CLASS TYPEID INHERITS error '{' . features '}' ';'

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    features  go to state 30
    feature   go to state 17


state 20

    5 class: CLASS TYPEID INHERITS TYPEID '{' . features '}' ';'
    9      | CLASS TYPEID INHERITS TYPEID '{' . error '}' ';'

    error     shift, and go to state 31
    OBJECTID  shift, and go to state 15

    error     [reduce using rule 10 (features)]
    OBJECTID  [reduce using rule 10 (features)]
    '}'       reduce using rule 10 (features)

    features  go to state 32
    feature   go to state 17


state 21

    8 class: CLASS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 33


state 22

   20 feature: error '(' . formals ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 34

    formals  go to state 35
    formal   go to state 36


state 23

   17 feature: error ':' . TYPEID ';'

    TYPEID  shift, and go to state 37


state 24

   13 feature: OBJECTID '(' . ')' ':' TYPEID '{' expression '}' ';'
   14        | OBJECTID '(' . formals ')' ':' TYPEID '{' expression '}' ';'
   21        | OBJECTID '(' . formals ')' ':' TYPEID '{' error '}' ';'
   22        | OBJECTID '(' . error ')' ':' TYPEID '{' expression '}' ';'

    error     shift, and go to state 38
    OBJECTID  shift, and go to state 34
    ')'       shift, and go to state 39

    formals  go to state 40
    formal   go to state 36


state 25

   15 feature: OBJECTID ':' . TYPEID ';'
   16        | OBJECTID ':' . TYPEID ASSIGN expression ';'
   18        | OBJECTID ':' . error ';'
   19        | OBJECTID ':' . TYPEID error

    error   shift, and go to state 41
    TYPEID  shift, and go to state 42


state 26

   17 feature: error . ':' TYPEID ';'
   20        | error . '(' formals ')' ':' TYPEID '{' expression '}' ';'

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 27

    4 class: CLASS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 43


state 28

   12 features: features feature .

    $default  reduce using rule 12 (features)


state 29

    7 class: CLASS TYPEID error TYPEID '{' features . '}' ';'
   12 features: features . feature

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 44

    feature  go to state 28


state 30

    6 class: CLASS TYPEID INHERITS error '{' features . '}' ';'
   12 features: features . feature

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 45

    feature  go to state 28


state 31

    9 class: CLASS TYPEID INHERITS TYPEID '{' error . '}' ';'
   17 feature: error . ':' TYPEID ';'
   20        | error . '(' formals ')' ':' TYPEID '{' expression '}' ';'

    '}'  shift, and go to state 46
    '('  shift, and go to state 22
    ':'  shift, and go to state 23


state 32

    5 class: CLASS TYPEID INHERITS TYPEID '{' features . '}' ';'
   12 features: features . feature

    error     shift, and go to state 26
    OBJECTID  shift, and go to state 15
    '}'       shift, and go to state 47

    feature  go to state 28


state 33

    8 class: CLASS TYPEID '{' error '}' ';' .

    $default  reduce using rule 8 (class)


state 34

   25 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 48


state 35

   20 feature: error '(' formals . ')' ':' TYPEID '{' expression '}' ';'
   24 formals: formals . ',' formal

    ')'  shift, and go to state 49
    ','  shift, and go to state 50


state 36

   23 formals: formal .

    $default  reduce using rule 23 (formals)


state 37

   17 feature: error ':' TYPEID . ';'

    ';'  shift, and go to state 51


state 38

   22 feature: OBJECTID '(' error . ')' ':' TYPEID '{' expression '}' ';'

    ')'  shift, and go to state 52


state 39

   13 feature: OBJECTID '(' ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 53


state 40

   14 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expression '}' ';'
   21        | OBJECTID '(' formals . ')' ':' TYPEID '{' error '}' ';'
   24 formals: formals . ',' formal

    ')'  shift, and go to state 54
    ','  shift, and go to state 50


state 41

   18 feature: OBJECTID ':' error . ';'

    ';'  shift, and go to state 55


state 42

   15 feature: OBJECTID ':' TYPEID . ';'
   16        | OBJECTID ':' TYPEID . ASSIGN expression ';'
   19        | OBJECTID ':' TYPEID . error

    error   shift, and go to state 56
    ASSIGN  shift, and go to state 57
    ';'     shift, and go to state 58


state 43

    4 class: CLASS TYPEID '{' features '}' ';' .

    $default  reduce using rule 4 (class)


state 44

    7 class: CLASS TYPEID error TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 59


state 45

    6 class: CLASS TYPEID INHERITS error '{' features '}' . ';'

    ';'  shift, and go to state 60


state 46

    9 class: CLASS TYPEID INHERITS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 61


state 47

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' . ';'

    ';'  shift, and go to state 62


state 48

   25 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 63


state 49

   20 feature: error '(' formals ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 64


state 50

   24 formals: formals ',' . formal

    OBJECTID  shift, and go to state 34

    formal  go to state 65


state 51

   17 feature: error ':' TYPEID ';' .

    $default  reduce using rule 17 (feature)


state 52

   22 feature: OBJECTID '(' error ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 66


state 53

   13 feature: OBJECTID '(' ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 67


state 54

   14 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expression '}' ';'
   21        | OBJECTID '(' formals ')' . ':' TYPEID '{' error '}' ';'

    ':'  shift, and go to state 68


state 55

   18 feature: OBJECTID ':' error ';' .

    $default  reduce using rule 18 (feature)


state 56

   19 feature: OBJECTID ':' TYPEID error .

    $default  reduce using rule 19 (feature)


state 57

   16 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 83


state 58

   15 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 15 (feature)


state 59

    7 class: CLASS TYPEID error TYPEID '{' features '}' ';' .

    $default  reduce using rule 7 (class)


state 60

    6 class: CLASS TYPEID INHERITS error '{' features '}' ';' .

    $default  reduce using rule 6 (class)


state 61

    9 class: CLASS TYPEID INHERITS TYPEID '{' error '}' ';' .

    $default  reduce using rule 9 (class)


state 62

    5 class: CLASS TYPEID INHERITS TYPEID '{' features '}' ';' .

    $default  reduce using rule 5 (class)


state 63

   25 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 25 (formal)


state 64

   20 feature: error '(' formals ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 84


state 65

   24 formals: formals ',' formal .

    $default  reduce using rule 24 (formals)


state 66

   22 feature: OBJECTID '(' error ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 85


state 67

   13 feature: OBJECTID '(' ')' ':' TYPEID . '{' expression '}' ';'

    '{'  shift, and go to state 86


state 68

   14 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expression '}' ';'
   21        | OBJECTID '(' formals ')' ':' . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 87


state 69

   41 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 88


state 70

   61 expression: LET . OBJECTID ':' TYPEID IN expression
   62           | LET . OBJECTID ':' TYPEID ASSIGN expression IN expression
   63           | LET . OBJECTID ':' TYPEID ',' let_stmt
   64           | LET . OBJECTID ':' TYPEID ASSIGN expression ',' let_stmt
   65           | LET . OBJECTID ':' TYPEID ASSIGN error ',' let_stmt

    OBJECTID  shift, and go to state 89


state 71

   42 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 90


state 72

   44 expression: CASE . expression OF cases ESAC

    IF          shift, and go to state 69
    LET         shift, and go to state 70
    WHILE       shift, and go to state 71
    CASE        shift, and go to state 72
    NEW         shift, and go to state 73
    ISVOID      shift, and go to state 74
    STR_CONST   shift, and go to state 75
    INT_CONST   shift, and go to state 76
    BOOL_CONST  shift, and go to state 77
    OBJECTID    shift, and go to state 78
    NOT         shift, and go to state 79
    '~'         shift, and go to state 80
    '{'         shift, and go to state 81
    '('         shift, and go to state 82

    expression  go to state 91
